<resources>
    <string name="app_name">OnJuno</string>
    <string name="value_state">Value State</string>
    <string name="empty_state">Empty State</string>
    <string name="your_crypto_holdings">Your Crypto Holdings</string>
    <string name="buy">Buy</string>
    <string name="deposit">Deposit</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">View all</string>
    <string name="current_prices">Current Prices</string>
</resources>