<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/crypto_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/grey_border_bg"
                    android:padding="16dp"
                    android:layout_margin="24dp">

                    <TextView
                        android:id="@+id/crypto_acc_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Cryptowallllleett" />

                    <TextView
                        android:id="@+id/crypto_acc_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/crypto_acc_title"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        tools:text="guiedbfaluf" />

                    <TextView
                        android:id="@+id/crypto_curr_bal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="1245" />

                    <TextView
                        android:id="@+id/deposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="26dp"
                        android:background="@drawable/blue_border_bg"
                        android:paddingStart="6dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="4dp"
                        android:visibility="gone"
                        android:text="@string/deposit"
                        android:textColor="@color/blue"
                        android:gravity="center_vertical"/>

                </RelativeLayout>

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:id="@+id/your_holding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_crypto_holdings"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="24dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/your_holding_recyclerview"
                    android:layout_margin="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding=".5dp"
                    android:background="@drawable/grey_border_bg"
                    android:backgroundTint="@color/light_grey"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:nestedScrollingEnabled="false"/>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/light_grey"/>

                <LinearLayout
                    android:id="@+id/recent_txn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="24dp">

                    <TextView
                        android:id="@+id/recent_trans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recent_transactions"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/view_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_trans_recyclerview"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:nestedScrollingEnabled="false"/>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:id="@+id/curr_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_prices"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="24dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/curr_price_recyclerview"
                    android:layout_margin="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    android:nestedScrollingEnabled="false"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>